tests/spec/compile-pass/029_trust_impl_send_handle.zn
// category: compile-pass
// profile: hosted
// purpose: thread-safe resource handles with destroy can explicitly declare Send through trust impl

module tests.pass.trustImplSendHandle;

import core.result.{Result, Ok};
import std.thread.Thread;

enum Error {
    Failed,
}

struct OsHandle {
    raw: I32,
}

impl OsHandle {
    destroy {}
}

trust impl Send for OsHandle {}

fn main() -> Result<Unit, Error> {
    val handle = OsHandle { raw: 3 };
    val thread = try Thread.spawn(move () -> Result<Unit, Error> {
        val ignored = handle.raw;
        return Ok(());
    });
    try move thread.join();
    return Ok(());
}
