tests/spec/compile-fail/029_destroy_calls_result_api.zn
// category: compile-fail
// profile: freestanding
// purpose: destroy blocks cannot call cleanup APIs that return Result

module tests.fail.destroyCallsResultApi;

import core.result.{Result, Ok};

enum IoError {
    CloseFailed,
}

struct File {
    fd: I32,
}

impl File {
    destroy {
        closeChecked(self.fd); // expected-error: destroy cannot call Result-returning cleanup API
    }
}

fn closeChecked(fd: I32) -> Result<Unit, IoError> {
    return Ok(());
}
